[tool.poetry]
name = "address-provider"
version = "0.1.0"
description = ""
authors = ["masaki925 <masaki925@gmail.com>"]
readme = "README.md"
packages = [{include = "address_provider", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
